Update MoveFeatureTest.java