@@ -12,6 +12,7 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 
 import de.ovgu.featureide.fm.core.base.IFeatureModel;
+import de.ovgu.featureide.fm.core.base.impl.FeatureModel;
 import de.ovgu.featureide.fm.core.io.UnsupportedModelException;
 import fmautorepair.mutationoperators.FMMutation;
 import fmautorepair.utils.CollectionsUtil;
@@ -29,9 +30,8 @@ public class MoveFeatureTest {
 	public void testMutate() throws FileNotFoundException, UnsupportedModelException {		
 		IFeatureModel fm = Utils.readModel("examples_fmsfrompreprocessor/nadi_icse14/Example1_pa.xml");
 		List<FMMutation> res = CollectionsUtil.listFromIterator(MoveFeature.instance.mutate(fm));
-		Pair<FeatureModel, String> fmm = res.get(0);
+		IFeatureModel fmm = res.get(0).getFirst();
 		assertNotSame(fmm, fm);
-		
 	}
 
 	
@@ -70,7 +70,7 @@ public class MoveFeatureTest {
 	public void testMove() throws FileNotFoundException, UnsupportedModelException{
 		IFeatureModel a = Utils.readModel("examples_fmsfrompreprocessor/nadi_icse14/listing2_ash_busybox_ag2.xml");
 		FMMutation res = MoveFeature.moveFeatureTo(a, a.getFeature("ASH"), a.getFeature("EDITING_VI"));
-		System.out.println(res.getFirst() + "\n " +res.getFirst().getFeatureNames());
+		System.out.println(res.getFirst() + "\n " + Utils.getFeatureNames(res.getFirst()));
 	}
 	
 }
